Fix long hyperlinks by adding wrapping
Problem is most prevalent on the kbcs.fm/listen page

--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ input, button, select, textarea {
 a {
 	color: #003d79;
 	text-decoration:underline;
+	word-wrap: break-word;
 }
 
 
@@ -993,6 +994,14 @@ div.video-container {
 	margin-top: 0;
 } 
 
+/*Nav-page*/
+div.span6 a {
+    white-space: pre-wrap; /* css-3 */    
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */    
+    white-space: -o-pre-wrap; /* Opera 7 */    
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
 
 /* Large desktop overides */
 @media (min-width: 1200px) {
